# data

./: .env  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  Procfile  README.md  apacheSpark.py  app.py  architecture.md  commit-msg.py  contributors.txt  database.py  docker-compose.yml  exec.spec  login.py  package-lock.json  package.json  pyproject.toml  release.md  requirements.txt  setup.cfg  setup.sh
.circleci/: config.yml
.devcontainer/: README.md  devcontainer.json
.github/: FUNDING.yml  SECURITY.md  SUPPORT.md
.github/workflows/: codeql.yml  codescan.yml  docker-publish.yml  eslint.yml  main.yml  msvc.yml
.husky/: pre-commit
.streamlit/: config.toml  pages.toml  secrets.toml
admin/: README.md
admin/conf/: local_config.cfg
admin/data_crawlers/: scrapy.cfg
admin/target_url_crawlers/: scrapy.cfg
api/: app.py  requirements.txt
backend/.streamlit/: secrets.toml
backend/admin/: .gitignore  README.md  docker-compose.yml  go_spider.py
backend/dashboard/: mg_clean_table_product.ipynb  spark.py
backend/docs/: SOLID.md  api-references.md  (+1 more)
client/: .env  app.py  bebidas.csv  bebidasSpark.py  clientesSpark.py  config.toml  debug.sh  funcionariosSpark.py  mercadoriasSpark.py  novos_usuarios.csv  package.json  pratosSpark.py  requirements.txt  reservasSpark.py  setup.py
docs/: AUTHORS.md  ROTEIRO-DE-EXTENS¦O-Finalizado.docx  api-references.md  big-data.md  commitMensagem.md  git-alias.md  zom.csv
java/: README.md
myenv/: pyvenv.cfg
src/: main.py
(+365 files in other folders)
